--- a/Dashboard.html
+++ b/Dashboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>KeepTrack</title>
-	<link rel="stylesheet" href="Dstyle.css">
+	<link rel="stylesheet" href="DStyle.css">
 </head>
 <body>
 	<header>
