--- a/New_Admit.html
+++ b/New_Admit.html
@@ -24,7 +24,28 @@
         <br><br>
 
         <label for="membershipTime">Membership Time</label>
-        <input type="time" id="membershipTime" name="membershipTime" required />
+        <div class='duration' >
+          <input type="radio" name="select" id="option-1" checked>
+          <input type="radio" name="select" id="option-2">
+          <input type="radio" name="select" id="option-3">
+          <input type="radio" name="select" id="option-4">
+            <label for="option-1" class="option option-1">
+              <div ></div>
+               <span>1_Month</span>
+               </label>
+            <label for="option-2" class="option option-2">
+              <div ></div>
+              <span>3_Month</span>
+            </label>
+            <label for="option-3" class="option option-3">
+              <div ></div>
+              <span>6_Month</span>
+            </label>
+            <label for="option-4" class="option option-4">
+              <div ></div>
+              <span>12_Month</span>
+            </label>
+         </div>
         <br><br>
 
         <label for="membershipDate">Membership Date</label>
